--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "editor.fontSize": 11,
+    "editor.fontSize": 14,
     "editor.formatOnSave": true,
     "editor.fontFamily": "Consolas, 'Courier New', monospace",
-    "workbench.colorTheme": "Default Dark Modern"
+    "workbench.colorTheme": "Kimbie Dark"
 }
